# heval

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: writing-style-reminder.sh
.claude/skills/grill-me/: SKILL.md
.github/workflows/: ci.yml  codecov.yml  docs.yml  release.yml  tag-release.yml
devdocs/: README.md  architecture.md  engines.md  package-comparison.md
devdocs/guidance/: writing_style.md
devdocs/replication-notes/: mdm-des-departures.md
devdocs/roadmap/: 13-des-sicksicker-replication.md  16-stochastic-compartmental-engine.md  18-survival-analysis-bridge.md  19-partitioned-survival-engine.md  20-multistate-semimarkov.md  README.md
devdocs/roadmap/done/: 01-quartodoc-site.md  02-calibration-workflow.md  03-microsim-engine.md  04-des-engine.md  05-markov-cohort-engine.md  06-resonant-api.md  08-deterministic-sensitivity.md  09-parallel-and-progress.md  10-markov-vs-microsim-tutorial.md  11-docs-narrative-order.md  12-voi-tutorial.md
devdocs/tutorial-evaluation/: README.md  eval-byo-outputs.md  eval-calibrate-abc.md  eval-calibration-workflow.md  eval-des.md  eval-dsa.md  eval-full-pipeline.md  eval-markov-vs-microsim.md  eval-mdm-cohort.md  eval-microsim.md  eval-parameter-inputs.md  eval-seir-vaccination.md  eval-voi.md
docs/: _prerender.py  _quarto.yml  _structured-data.html  build_colab_notebooks.py  get-started.qmd  index.qmd  llms.txt  matplotlibrc  robots.txt  theme.scss
docs/_notebooks/: byo-outputs.ipynb  calibrate-abc.ipynb  calibrate-microsim.ipynb  calibrate-sbi.ipynb  calibration-workflow.ipynb  des.ipynb  dsa.ipynb  full-pipeline.ipynb  index.ipynb  markov-vs-microsim.ipynb  mdm-cohort-timedep.ipynb  mdm-cohort.ipynb  mdm-des.ipynb  mdm-microsim.ipynb  microsim.ipynb  parameter-inputs.ipynb  seir-vaccination.ipynb  surrogate-calibration.ipynb  survival-bridge.ipynb  survival-models.ipynb  voi.ipynb
docs/concepts/: architecture.qmd  engines.qmd
docs/tutorials/: byo-outputs.qmd  calibrate-abc.qmd  calibrate-microsim.qmd  calibrate-sbi.qmd  calibration-workflow.qmd  des.qmd  dsa.qmd  full-pipeline.qmd  index.qmd  markov-vs-microsim.qmd  mdm-cohort-timedep.qmd  mdm-cohort.qmd  mdm-des.qmd  mdm-microsim.qmd  microsim.qmd  parameter-inputs.qmd  replication-gallery.qmd  seir-vaccination.qmd  surrogate-calibration.qmd  survival-bridge.qmd  survival-models.qmd  voi.qmd
examples/: byoo_example.py  calibrate_abc.py  calibrate_microsim.py  calibrate_sbi.py  calibration_workflow.py  des.py  dsa.py  markov_vs_microsim.py  mdm_cohort.py  mdm_cohort_timedep.py  mdm_des.py  mdm_microsim.py  microsim.py  parameter_inputs.py  seir_vaccination.py  surrogate_calibration.py  survival_bridge.py  survival_models.py  voi_tutorial.py
examples/mdm_des/: __init__.py  model.py  mortality.py  outcomes.py  parameters.py  plots.py  run.py  transitions.py
examples/mdm_des/data/: us_mortality_2015.csv
guidance/: writing_style.md
roadmap/: 01-quartodoc-site.md  02-calibration-workflow.md  03-microsim-engine.md  04-des-engine.md  06-resonant-api.md  07-parameter-inputs.md  08-deterministic-sensitivity.md  09-parallel-and-progress.md  10-markov-vs-microsim-tutorial.md  12-voi-tutorial.md  README.md
roadmap/done/: 01-quartodoc-site.md  02-calibration-workflow.md  03-microsim-engine.md  04-des-engine.md  05-markov-cohort-engine.md  07-parameter-inputs.md
src/heormodel/: __init__.py
src/heormodel/calibrate/: __init__.py  abc.py
src/heormodel/cea/: __init__.py  ceac.py  frontier.py  nb.py
src/heormodel/dsa/: __init__.py  design.py
src/heormodel/models/: __init__.py  _accrual.py  _interventions.py  _strategies.py  des.py  markov.py  microsim.py  occupancy.py  ode.py  outcomes.py  protocol.py
src/heormodel/params/: __init__.py  distributions.py  inputs.py  mix.py  sampling.py
src/heormodel/report/: __init__.py  plots.py  provenance.py  tables.py
src/heormodel/run/: __init__.py  _progress.py  diagnostics.py  runner.py  seeds.py
src/heormodel/survival/: __init__.py  algebra.py  curve.py  fitting.py  transitions.py
src/heormodel/voi/: __init__.py  _metamodel.py  evpi.py  evppi.py  evsi.py
src/heval/: __init__.py
src/heval/calibrate/: __init__.py  abc.py
src/heval/cea/: ceac.py  (+3 more)
tests/: test_calibrate.py  test_cea.py  test_des.py  test_dsa.py  test_interventions.py  test_markov.py  test_markov_vs_microsim.py  test_mdm_des.py  test_microsim.py  test_occupancy.py  test_ode.py  test_outcomes_run.py  test_params.py  test_report.py  test_run_parallel.py  test_strategies.py  test_surrogate_calibration.py  test_survival.py  test_survival_bridge.py  test_voi.py
(+26 files in other folders)
