[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heval"
version = "0.3.0"
description = "Health economic evaluation in Python: PSA parameters, swappable model engines, cost-effectiveness analysis, and value of information"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pedro Nascimento de Lima" }]
keywords = ["health economics", "HEOR", "HTA", "cost-effectiveness", "value of information", "PSA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
]

[project.urls]
Documentation = "https://pedroliman.github.io/heval/"
Repository = "https://github.com/pedroliman/heval"
Changelog = "https://github.com/pedroliman/heval/blob/main/CHANGELOG.md"

[project.optional-dependencies]
calibration = ["pyabc>=0.12"]
des = ["simpy>=4.0"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "pyabc>=0.12", "simpy>=4.0"]
docs = ["quartodoc>=0.11", "ipykernel>=6.29,<7", "nbclient>=0.10", "nbformat>=5.10", "pyyaml>=6", "pyabc>=0.12", "simpy>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
heval = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = false
files = ["src/heval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/heval"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
