[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heormodel"
version = "0.7.2"
description = "Decision-analytic modeling for health economic evaluation and health technology assessment: probabilistic parameters, cohort and individual-level simulation engines, cost-effectiveness analysis, and value of information"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pedro Nascimento de Lima" }]
keywords = ["health economics", "HEOR", "HTA", "cost-effectiveness", "value of information", "PSA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
]

[project.urls]
Documentation = "https://pedroliman.github.io/heormodel/"
Repository = "https://github.com/pedroliman/heormodel"
Changelog = "https://github.com/pedroliman/heormodel/blob/main/CHANGELOG.md"

[project.optional-dependencies]
calibration = ["pyabc>=0.12"]
des = ["simpy>=4.0"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "pyabc>=0.12", "simpy>=4.0"]
docs = ["quartodoc>=0.11", "ipykernel>=6.29,<7", "nbclient>=0.10", "nbformat>=5.10", "pyyaml>=6", "pyabc>=0.12", "simpy>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
heormodel = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Notebooks under docs/_notebooks are generated from the tutorials, which are not
# linted, so mirror that and skip them here.
extend-exclude = ["docs/_notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY"]

[tool.ruff.lint.isort]
# The mdm_des example is a folder of sibling modules run as a script; group its
# flat imports together rather than mixing them into the third-party block.
known-local-folder = ["model", "mortality", "outcomes", "parameters", "plots", "transitions"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = false
files = ["src/heormodel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["examples"]

[tool.coverage.run]
source = ["src/heormodel"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
exclude_also = ["if TYPE_CHECKING:"]
